@@ -33,21 +33,21 @@ DEVICESCAN
 # and min/max temperatures.
 #DEVICESCAN -I 194 -I 231 -I 9 -W 5
 
-# First (primary) ATA/IDE hard disk.  Monitor all attributes, enable
+# First ATA/SATA or SCSI/SAS disk.  Monitor all attributes, enable
 # automatic online data collection, automatic Attribute autosave, and
 # start a short self-test every day between 2-3am, and a long self test
 # Saturdays between 3-4am.
-#/dev/hda -a -o on -S on -s (S/../.././02|L/../../6/03)
+#/dev/sda -a -o on -S on -s (S/../.././02|L/../../6/03)
 
 # Monitor SMART status, ATA Error Log, Self-test log, and track
 # changes in all attributes except for attribute 194
-#/dev/hdb -H -l error -l selftest -t -I 194 
+#/dev/sdb -H -l error -l selftest -t -I 194
 
 # Monitor all attributes except normalized Temperature (usually 194),
 # but track Temperature changes >= 4 Celsius, report Temperatures
 # >= 45 Celsius and changes in Raw value of Reallocated_Sector_Ct (5).
 # Send mail on SMART failures or when Temperature is >= 55 Celsius.
-#/dev/hdc -a -I 194 -W 4,45,55 -R 5 -m admin@example.com
+#/dev/sdc -a -I 194 -W 4,45,55 -R 5 -m admin@example.com
 
 # An ATA disk may appear as a SCSI device to the OS. If a SCSI to
 # ATA Translation (SAT) layer is between the OS and the device then
@@ -57,7 +57,7 @@ DEVICESCAN
 
 # A very silent check.  Only report SMART health status if it fails
 # But send an email in this case
-#/dev/hdc -H -C 0 -U 0 -m admin@example.com
+#/dev/sdc -H -C 0 -U 0 -m admin@example.com
 
 # First two SCSI disks.  This will monitor everything that smartd can
 # monitor.  Start extended self-tests Wednesdays between 6-7pm and
@@ -141,5 +141,5 @@ DEVICESCAN
 # All but -d, -m and -M Directives are only implemented for ATA devices
 #
 # If the test string DEVICESCAN is the first uncommented text
-# then smartd will scan for devices /dev/hd[a-l] and /dev/sd[a-z]
+# then smartd will scan for devices.
 # DEVICESCAN may be followed by any desired Directives.
